--- a/EspnFantasyLeagueHistoryDataLoader/EspnFantasyLeagueHistoryDataLoader.csproj
+++ b/EspnFantasyLeagueHistoryDataLoader/EspnFantasyLeagueHistoryDataLoader.csproj
@@ -25,4 +25,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.7" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DataModels\DataModels.csproj" />
+  </ItemGroup>
 </Project>
